# src/main/resources/openapi.yaml
@@ -96,7 +96,7 @@ paths:
       responses:
         204:
           description: Deleted a movie
-          content: {}
+          content: { }
 
   /ratings/{userId}/{movieId}:
     get:
@@ -168,7 +168,7 @@ paths:
       responses:
         204:
           description: Deleted a rating
-          content: {}
+          content: { }
 
   /ratings:
     post:
@@ -191,13 +191,24 @@ paths:
   /users:
     get:
       summary: Get all users
+      parameters:
+        - name: pageNo
+          in : query
+          schema:
+            type: integer
+            default: 0
+        - name: pageSize
+          in: query
+          schema:
+            type: integer
+            default: 20
       responses:
         200:
           description: All users
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/UserList"
+                $ref: "#/components/schemas/UserPage"
     post:
       summary: Create a new user
       requestBody:
@@ -205,10 +216,49 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/UserPut"
       responses:
         201:
           description: Created a new user
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+  /users/{id}:
+    get:
+      summary: Get user by id
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: User
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+    put:
+      summary: Updates a user
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: User to update
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserPut"
+      responses:
+        201:
+          description: Updated user
           content:
             application/json:
               schema:
@@ -330,11 +380,33 @@ components:
         id:
           type: integer
           format: int64
+        fileId:
+          type: integer
+          format: int64
         username:
           type: string
+        genres:
+          type: array
+          items:
+            type: string
       required:
         - username
+        - genres
         - id
+    UserPut:
+      type: object
+      properties:
+        username:
+          type: string
+        genres:
+          type: array
+          items:
+            type: string
+      required:
+        - username
+        - genres
+        - id
+
 
     UserList:
       type: array
@@ -360,6 +432,29 @@ components:
         - genres
         - id
         - imdbId
+
+
+    UserPage:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/User"
+        totalPages:
+          type: integer
+        totalElements:
+          type: integer
+        size:
+          type: integer
+        number:
+          type: integer
+      required:
+        - content
+        - totalElements
+        - totalPages
+        - size
+        - number
 
     MoviePage:
       type: object
